starts export creation

--- a/app/views/exports/index.html.erb
+++ b/app/views/exports/index.html.erb
@@ -2,34 +2,26 @@
 <% provide(:first_header, "All Exports") %>
 
 <div class="row">
-<div>
-<% hidden_fields = ["created_at", "updated_at", "id" ] %>
+  <div>
+    <% hidden_fields = ["created_at", "updated_at", "id" ] %>
 
-<table class='code-index-table'>
-	<thead>
-		<% @exports.first.attributes.each_pair do |k, v| %>
-			<% if !hidden_fields.include?(k) %>
-				<th><b><%= k.capitalize %></b></th>
-			<% end %>
-		<% end %>
-		<th>Links</th>
-	</thead>
-	<tbody>
-			<% @exports.each do |o| %>
-				  <tr>
-				  	<% o.attributes.each_pair do |k, v| %>
-	  					<% if !hidden_fields.include?(k) %>
-							  <td><%= v %></td>
-						<% end %>
-					<% end %>
-					<td> 
-					</td> 
-				  </tr>
-
-			<% end %>
-	</tbody>
-</table>
-
-<br>
-
- 
+    <table class='code-index-table'>
+      <thead>
+        <tr>
+          <th>Export Id</th>
+          <th>Email</th>
+          <th>Projects</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @exports.each do |e| %>
+          <tr>
+            <td><%= e.id %></td>
+            <td><%= e.email %></td>
+            <td><%= e.projects.count %></td>
+          </tr>
+        <%end%>
+      </tbody>
+    </table>
+  </div>
+</div>
