Adds basic export functionality

--- a/app/views/exports/index.html.erb
+++ b/app/views/exports/index.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "Exports") %>
 <% provide(:first_header, "All Exports") %>
-
+<%# <% @proj %1> %>
 <div class="row">
   <div>
     <% hidden_fields = ["created_at", "updated_at", "id" ] %>
