fixes pagination problem with export results

--- a/app/views/exports/show.html.erb
+++ b/app/views/exports/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Export") %>
-<% provide(:first_header, "Export: #{@export.id}") %>
+<% provide(:first_header, "") %>
 
 <div class="row">
 <section>
