--- a/app/views/static_pages/_map_js.html.erb
+++ b/app/views/static_pages/_map_js.html.erb
@@ -31,4 +31,9 @@
 <div id="tooltip"><p id="tooltiptext"></p></div>
 
 <%= javascript_include_tag   "map/index" %>
+<script>
+  $(function() {
+    $('#tooltip').hide()
+  })
+</script>
 
