--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -1,151 +1,239 @@
-<%= simple_form_for(@project, html: {class: "form-horizontal"}) do |f| %>
-<br>
-<div class="row project-main-details">
-<h3>Project Info: </h3>
-
-	<%= f.input :owner_id, wrapper_html: {class: " span6"},  as: :hidden, hint: "Created by: "+ (@project.owner.nil? ? 'None' : @project.owner.name) %>
-	<%= f.input :active, wrapper_html: {class: " span3"} %>
-	<%= f.input :iteration, as: :hidden, hint: "Iteration: #{@project.iteration+=1}" %>
-	<%= f.input :title, wrapper_html: {class: "span10"} %>
-	<%= f.association :donor, wrapper_html: {class: "span4"}, label: 'Donor country' %>
-	<%= f.input :year, hint: "Commitment year", wrapper_html: {class: "span4"} %>
-	<%= f.input :year_uncertain, label: "Year is uncertain", wrapper_html: { class: "span3"} %>
-	<%= f.input :description, input_html: {rows: "10", cols: "30" }, wrapper_html: {class: "span11"} %>
-	<%= f.input :capacity, wrapper_html: {class: "span6"} %>
-	<%= f.association :verified, wrapper_html: {class: "span5"} %>
-</div>
-<div class='row '>
-	<h3>Dates:</h3>
-	<div class='span5 dates-box'>
-		<%= f.input :start_planned, 
-			include_blank: true, 
-			input_html: {value: ''}, 
-			use_short_month: true, start_year: 1980, 
-			end_year: Date.today.year, 
-			wrapper_html: {class: "project-date span4"} %>
-		<%= f.input :start_actual, 
-			include_blank: true, 
-			input_html: {value: '' }, 
-			use_short_month: true, 
-			start_year: 1980, 
-			end_year: Date.today.year, 
-			wrapper_html: {class: "project-date span4"} %>
-	</div>
-	<div class='span5 dates-box' >
-		<%= f.input :end_planned, 
-			include_blank: true, 
-			input_html: {value: '' }, 
-			use_short_month: true, 
-			start_year: 1980, 
-			end_year: Date.today.year, 
-			wrapper_html: {class: "project-date span4"} %>
-		<%= f.input :end_actual, 
-			include_blank: true, 
-			input_html: {value: '' },
-			use_short_month: true, 
-			start_year: 1980, 
-			end_year: Date.today.year,
-			wrapper_html: {class: "project-date span4"} %>
-	</div>
-</div>
-
-<div class='row project-sector-details'>
-
-	<h3>Details:</h3>
-	<%= f.association :sector, wrapper_html: {class: "span4"} %>
-	<%= f.input :sector_comment, wrapper_html: {class: " span4"}, hint: "If multisector, add details" %>
-	<%= f.input :crs_sector, wrapper_html: {class: " span4"}, hint: "3-digit CRS code" %>
-	<br>
-	<%= f.input :is_commercial, wrapper_html: {class: " span5"} %>
-	<%= f.input :line_of_credit,wrapper_html: {class: " span3"}, hint: "Is this project a line of credit?" %>
-	<%= f.input :is_cofinanced,wrapper_html: {class: " span3"} %>
-	<%= f.input :debt_uncertain, wrapper_html: {class: "span4"} %> 
-	<!-- <%= 
-		#f.association :tied, wrapper_html: {class: " span5"}, hint: "This variable is deprecated." 
-		%>!-->
-	<%= f.association :flow_type, wrapper_html: {class: " span5"} %>
-	<!-- <%= 
-		#f.association :oda_like, wrapper_html: {class: " span5"}, hint: "This variable is deprecated."
-		%>
-	!-->
-	<%= f.association :status, wrapper_html: {class: " span5"} %>
-	<%= f.association :intent, wrapper_html: {class: " span4"} %>
+<div id='project-form-wrapper' class='project-form row-fluid span12'>
 	
-	
-</div>
+	<div id='project-form-nav-wrapper' class='span1  scroll-spy'>
+		<ul class='nav nav-pills nav-stacked' id='project-form-nav'>
+			<li><a href='#project-form-project'>Project</a></li>
+			<li><a href='#project-form-flow-class'>Flow Class</a></li>
+			<li><a href='#project-form-loan-detail'>Loan Detail</a></li>
+			<li><a href='#project-form-organizations'>Organizations</a></li>
+			<li><a href='#project-form-sources'>Sources</a></li>
+			<li><a href='#project-form-recipients'>Recipients</a></li>
+			<li><a href='#project-form-transactions'>Transactions</a></li>
+			<li><a href='#project-form-contacts'>Contacts</a></li>
+			<li><a href = '#' class ='btn' id='toggle_color'>Colorize</a></li>
+		</ul>
+	</div>
 
-<div class='row project-loan-detail'>
-	<h2> Loan Detail: </h2>
-	<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
-	    <%= loan_detail_form.association :loan_type,wrapper_html: {class: " span4"} %>
-	    <%= loan_detail_form.input :interest_rate,wrapper_html: {class: " span4"}, hint: "In %, eg. 2.5 for 2.5%." %>
-	    <%= loan_detail_form.input :grace_period,wrapper_html: {class: " span4"}, hint: "Years until first payment." %>
-	    <%= loan_detail_form.input :maturity,wrapper_html: {class: " span4"}, hint: "Years until final payment." %>
-	    <%= loan_detail_form.input :grant_element,wrapper_html: {class: " span4"}, hint: "In %." %>
+	<%= simple_form_for(@project, html: {class: ""}) do |f| %>
+
+		<div id='project-form-content' class='span11'>
+			<div class='row-fluid'>
+				<div id ='project-form-project' class='span12'>
+					<h3> Project</h3>
+					<div class='row-fluid'>
+						<%= f.association :donor, wrapper_html: {class: "span2"}, label: 'Donor country' %>
+						<%= f.input :title, wrapper_html: {class: "span6"} %>
+						<%= f.input :year, label: "Com. year", wrapper_html: {class: "span2"} %>
+						<%= f.input :year_uncertain, label: false, inline_label: "Year uncertain?", wrapper_html: { class: "span2"} %>
+						<%= f.input :active, label:false, inline_label: "Active?", wrapper_html: {class: 
+							"span2 active-check #{@project.active ? 'active-project-check' : 'inactive-project-check'}"} %>
+					</div>
+					<div class='row-fluid'>	
+						<%= f.association :verified, wrapper_html: {class: "span3"} %>
+						<%= f.association :status, wrapper_html: {class: "span3"} %>
+						<%= f.association :intent, wrapper_html: {class: "span3"} %>
+					</div>
+					<div class='row-fluid'>
+						<%= f.input :description, input_html: {rows: "8", cols: "30" }, wrapper_html: {class: "span12"} %>
+					</div>
+						<div class='row-fluid'>
+							<%= f.input :capacity, wrapper_html: {class: "span3"} %>
+							<%= f.association :sector, wrapper_html: {class: "span3"} %>
+							<%= f.input :sector_comment, wrapper_html: {class: "span3"} #hint: "If multisector, add details" 
+							%>
+							<%= f.association :flow_type, wrapper_html: {class: "span3"} %>
+						</div>
+					<div class='row-fluid'>
+						<div id = 'project-form-flow-class' class = 'span3'>
+							<hr>
+							<%= f.simple_fields_for :flow_class do |flow_class_form| %>  
+								<%= flow_class_form.association :oda_like_1 %>
+								<%= flow_class_form.association :oda_like_2 %>
+								<%= flow_class_form.association :oda_like_master %>
+								    <span style="color:#999">Will be autoarbitrated on Save if there is no Master and both flow_classes match</span>
+							<% end %>
+						</div>
+						<div class='span9 row-fluid'>
+							<div class='span4'>
+								<div class='row-fluid'>
+									<%= f.input :is_commercial, label: false, inline_label: "Commercial?", wrapper_html: {class: "span6"} %>
+									<%= f.input :line_of_credit, label: false, wrapper_html: {class: "span6"}, inline_label: "Credit Line?" %>
+								</div>
+								<div class='row-fluid'>
+									<%= f.input :is_cofinanced, label: false, inline_label: "Cofinanced?", wrapper_html: {class: "span6"} %>
+									<%= f.input :debt_uncertain, label: false, inline_label: "Debt uncertain?", wrapper_html: {class: "span6"} %>
+								</div> 
+							</div>
+
+
+							<div class='dates-box span8'>
+								<div class='row-fluid'>
+									
+									<% @date_defaults = {
+											include_blank: true, 
+											input_html: {value: ''}, 
+											use_short_month: true, 
+											start_year: 1980, 
+											end_year: 2020,
+											wrapper_html: {class: "project-date"}
+										}
+									%>
+									<div class='span6'>
+										<%= f.input :start_planned, @date_defaults %>
+										<%= f.input :start_actual, @date_defaults %>
+									</div>
+									<div class='span6'>
+										<%= f.input :end_planned, @date_defaults %>
+										<%= f.input :end_actual, @date_defaults %>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class='span9' id = 'project-form-loan-detail'>
+							<hr>
+							<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
+								<div class='row-fluid'>
+									<%= loan_detail_form.association :loan_type,wrapper_html: {class: "span2"} %>
+									<%= loan_detail_form.input :interest_rate,wrapper_html: {class: "span2"}, hint: "In %" %>
+									<%= loan_detail_form.input :grant_element,wrapper_html: {class: "span2"}, hint: "In %." %>
+									<%= loan_detail_form.input :grace_period,wrapper_html: {class: "span2"}, hint: "Years until first payment." %>
+									<%= loan_detail_form.input :maturity,wrapper_html: {class: "span2"}, hint: "Years until final payment." %>
+									<span style='color:#999"padding:5px"margin-top:10px"' class='span2 btn'><a href='http://www.worldbank.org/ida/ida-grant-element-calculator.html' target='_blank'>Grant Element Calculator <i class='icon-share'></i> </a></span>
+								</div>
+							<% end %>
+						</div>
+				</div>
+			</div>
+			<% add_one_label = "<i class='icon-plus'></i>Add One" %>
+			<div class='row-fluid'>
+				<div id = 'project-form-organizations' class='span6 project-accessory-fields'>
+					<p class='row-fluid'>
+						<b>Participating Organizations:</b> <%= link_to_add_fields add_one_label, f, :participating_organizations %>
+					</p>
+					<%= f.simple_fields_for :participating_organizations do |orgs| %>
+						<%= render 'fields_for_participating_organization', f: orgs %>
+					<% end %>
+				</div>
+				<div id = 'project-form-sources' class='span5 project-accessory-fields'>
+					<p class='row-fluid'>
+						<b>Sources:</b><%= link_to_add_fields add_one_label, f, :sources %>
+					</p>
+					<%= f.simple_fields_for :sources do |srcs| %>
+						<%= render 'fields_for_source', f: srcs %>
+					<% end %>
+				</div>
+			</div>
+			<div class='row-fluid'>
+				<div id = 'project-form-recipients' class='span5 project-accessory-fields'>
+					<p class='row-fluid'>
+						<b>Recipients:</b> <%= link_to_add_fields add_one_label, f, :geopoliticals %>
+					</p>
+					<%= f.simple_fields_for :geopoliticals do |geos| %>
+						<%= render 'fields_for_geopolitical', f: geos %>
+					<% end %>
+				</div>
+				
+				<div id = 'project-form-transactions' class='span6 project-accessory-fields'>
+					<p class='row-fluid'>
+						<b>Transactions:</b> <%= link_to_add_fields add_one_label, f, :transactions %>
+					</p>
+					<%= f.simple_fields_for :transactions do |amts| %>
+						<%= render 'fields_for_transaction', f: amts %>
+					<% end %>
+				</div>
+			</div>
+			<div class='row-fluid'>
+
+				
+				<div id = 'project-form-contacts' class='span7 project-accessory-fields'>
+					<p class='row-fluid'>
+						<b>Contacts:</b> <%= link_to_add_fields add_one_label, f, :contacts %>
+					</p>
+					<%= f.simple_fields_for :contacts do |cons| %>
+						<%= render 'fields_for_contact', f: cons %>
+					<% end %>
+				</div>
+			</div>
+		</div>
+		<%= f.input :iteration, as: :hidden, hint: "Iteration: #{@project.iteration+=1}" %>
+		<%= f.input :owner_id, wrapper_html: {class: ""},  as: :hidden, hint: "Owner: "+ (@project.owner.nil? ? 'None' : @project.owner.name) %>
+
+		<%= f.button :submit, "Save", class: 'submit-button' %>
 	<% end %>
- 	<span style='color:#999;padding:5px;' class='span3 btn'><a href='http://www.worldbank.org/ida/ida-grant-element-calculator.html' target='_blank'>Grant Element Calculator <i class='icon-share'></i> </a></span>
-</div>
+	<div class='span12'>
+		<br>
+	</div>
 
-<div class='row project-flow-class'>
-	<h2> Flow Class: </h2>
-	<%= f.simple_fields_for :flow_class do |flow_class_form| %>  
-			<% # Hard-coding this is a bad idea
-				%>
-			<%= flow_class_form.association :oda_like_1 %>
-			<%= flow_class_form.association :oda_like_2 %>
-			<%= flow_class_form.association :oda_like_master %>
-			    <span style="color:#999">Will be autoarbitrated on Save if there is no Master and both flow_classes match</span>
+</div>
+<script>
+	var changed = false
+
+	inputs = $('input, textarea, select')
+	
+	inputs.change(function() {
+		if (!changed) {
+			changed = true;
+		}
+	})
+
+	$('.submit-button').click(function(){
+		//to ignore the alert
+		changed = false
+	})
+
+
+	window.onbeforeunload = function(){
+		if (changed == true ) {
+			return 'You have edited this project!';
+		}
+	};
+
+	$('#project-form-nav').scrollspy()
+	
+	<% if !@project.active %>
+		$('#first_header').css("color", "#942").append(" -- INACTIVE -- ")
 	<% end %>
 
-</div>
-<div class='row project-accessory-fields'>
-	<h3>Transactions: </h3>
-	<div>
-		<%= f.simple_fields_for :transactions do |transaction_form| %>
-			<%= render 'transaction_fields', f: transaction_form %>
-		<% end %>
-		<b><%= link_to_add_fields "Add a Transaction", f, :transactions %></b>
-	</div>
-</div>
-<div class='row project-accessory-fields'>
-	<h3>Geopolitical Data: </h3>
-	<div>
-		<%= f.simple_fields_for :geopoliticals do |geos| %>
-			<%= render 'geopolitical_fields', f: geos %>
-		<% end %>
-		<b><%= link_to_add_fields "Add a Recipient", f, :geopoliticals %></b>
-	</div>
-</div>
-<div class='row project-accessory-fields'>
-	<h3>Participating Organizations: </h3>
-	<div>
-		<%= f.simple_fields_for :participating_organizations do |orgs| %>
-			<%= render 'participating_organization_fields', f: orgs %>
-		<% end %>
-		<b><%= link_to_add_fields "Add an Organization", f, :participating_organizations %></b>
-	</div>
-</div>
-<div class='row project-accessory-fields'>
-	<h3>Contacts: </h3>
-	<div>
-		<%= f.simple_fields_for :contacts do |cons| %>
-			<%= render 'contact_fields', f:cons %>
-		<% end %>
-		<b><%= link_to_add_fields "Add a Contact", f, :contacts %></b>
-	</div>
-</div>
-<div class='row project-accessory-fields'>
-	<h3>Sources: </h3>
-	<div>
-		<%= f.simple_fields_for :sources do |srcs| %>
-			<%= render 'source_fields', f: srcs %>
-		<% end %>
-		<b><%= link_to_add_fields "Add a Source", f, :sources %></b>
-	</div>
-</div>
-<div class='row'>
-	<%= f.button :submit, "Save" %>
-	<br>
-	
-</div>
-<% end %>
+	$('#project_active').change(function(e) {
+		$('.active-check').toggleClass('active-project-check').toggleClass('inactive-project-check')
+	})
+
+var colored = false
+function colorize(true_or_false) {
+	var items = [
+		["#project-form-nav-wrapper", "background-color", "f0c030"],
+		["#project-form-nav", "background-color", "f0f030"],
+		["#project-form-wrapper", "background-color", "40d040"],
+		["#project-form-content", "background-color", "5090a0"],
+		["#project-form-project", "background-color", "ee4466"],
+		["#project-form-flow-class", "background-color", "a91"],
+		["#project-form-loan-detail", "background-color", "1fa"],
+		["#project-form-sources", "background-color", "44eeaa"],
+		["#project-form-recipients", "background-color", "7c2"],
+		["#project-form-transactions", "background-color", "dda"],
+		["#project-form-organizations", "background-color", "1aa"],
+		["#project-form-contacts", "background-color", "375"],
+	]
+
+	items.forEach(function(item) {
+		$(item[0]).css(item[1], ( true_or_false ? "#"+item[2] : "transparent"))
+	})	
+
+	colored = true_or_false
+	console.log(colored)
+}
+
+function toggle_colorize() {
+	console.log(colored)
+	if ( colored == false ) {
+		colorize(true)
+	}
+	else { 
+
+		colorize(false) 
+	}
+}
+
+$('#toggle_color').click(toggle_colorize)
+
+</script>
