--- a/app/views/export_mailer/export_request.erb
+++ b/app/views/export_mailer/export_request.erb
@@ -1,1 +1,8 @@
-Good on ya!
+Your export is attached as in CSV format.<br /> 
+Alternately, click <%= link_to "here", root_url + @export.file_path %> to
+download your export.<br />
+
+Be aware that this link will be deactivated after a certain number of days.
+
+<br /><br />
+-Aiddata
