--- a/app/views/projects/_project_detail.html.erb
+++ b/app/views/projects/_project_detail.html.erb
@@ -16,7 +16,10 @@
 		<% if current_object.blank? %>
 			<%= @unset_data %>
 		<% elsif class_name == "Scope" %>
-			<%= current_object.map{|s| s.to_s.humanize}.join(', ') %>
+			<%= current_object
+					.map{|s| link_to(s.to_s.humanize, Scope.find_by_symbol(s)) }
+					.join(', ')
+					.html_safe %>
 		<% elsif class_name == "VisibleFlowClass" && current_object.class == Array %>
 			<%= link_to(current_object[0].name, current_object[0]) %> (<%= current_object[1] %>)
 		<% elsif [BigDecimal, Fixnum, String, Integer, TrueClass, FalseClass].include? current_object.class  %>
