--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -16,7 +16,8 @@
 
 	<%= simple_form_for(@project, html: {class: ""}) do |f| %>
 
-		<div id='project-form-content' class='span11'>
+		<div class='span11'>
+			<a class='project-form-anchor' id='project-form-content'></a>
 			<div class='row-fluid'>
 				<div id ='project-form-project' class='span12'>
 					<h3> Project</h3>
