--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,6 +11,7 @@ $navbarBackgroundHighlight: rgba(0,0,0,0);
 @import "scopes/styles";
 @import "project/styles";
 @import "navbar/styles";
+@import "map_vis/styles";
 
 
 /* mixins, variables, etc. */
@@ -134,58 +135,8 @@ footer {
   @include box_sizing;
 }
 
-                                        /* Visualization */
 
-#vis {
-  text-align:center;
-}
-#africa-map {
-  background: transparent;
-}
-#tooltip {
-  position:absolute;
-  font-family:sans-serif;
-  font-size:12px;
-  background-color:#fff;
-  border: 1px solid gray;
-  opacity: 0.9;
-}
-
-#tooltiptext {
-  margin: 1px 5px;
-}
-
-#sectors_body {
-  a {
-  color: inherit;
-  &:hover {
-    color: #ccc;
-    }
-  }
-}
-
-#top_projects_body{
-  color:black;
-  ul {
- 
-  }
-  li {
-    margin-left:5px;
-  }
-  a {
-  color: darkblue;
-    &:hover {
-      color:#ccc;
-    }
-  }
-}
-
-.axis line, .axis path {
-  fill:none;
-  stroke: #fff;
-}
-
-																														/* forms */
+                    										/* forms */
 
 
 input, textarea, select, .uneditable-input {
@@ -230,56 +181,6 @@ label {
 	}
 
 
-
-                                        /* Project Index */
-#project-search-results {
-  th {
-  margin: 2px 8px 4px 8px;
-  padding: 2px 3px 2px 3px; 
-  border-left: 1px solid #ddd;
-
-  }
-
-  td {
-  border-left: 1px solid #ddd;
-  margin: 2px 8px 4px 8px;
-  max-width:500px;
-  padding: 2px 3px 2px 3px; 
-  border-top: 1px solid #999;
-  }
-}
-.pagination {
-  vertical-align:center;
-  text-align:center;
-}
-#project-facets  {
-    border: 1px solid #333;
-    background-color: #ddd;
-    padding: 10px;
-  
-    .facet-list{ 
-      list-style:none;
-      display:none;
-    }
-
-
-
-    .facet-header {
-      display:block;
-      padding: 0 4px 0 4px;
-      margin: 5px 0px 5px 0px;
-      border-left: 2px solid #111;
-
-    }
-    .facet-list-item {
-      display:block;
-      padding: 0 4px 0 4px;
-      margin: 4px 0 4px 0;
-      border-left: 2px solid #fff;
-    }
-}
-
-
 																				/* Codes CSS */
 
 .code-table {
@@ -298,7 +199,7 @@ label {
     padding-left:15px;
   }
 }
-																		/* EXPORTER TABLE */
+																		/* AGGREGATE EXPORTER TABLE */
 																		
 #data_preview {
 	border: 1px solid #777;
