--- a/app/views/exports/show.html.erb
+++ b/app/views/exports/show.html.erb
@@ -4,12 +4,14 @@
 <h2>Your request is being processed.</h2>
 <div id="main_div" class="row">
 <section>
+  <div id="centered_div" class="center" >
+  <p> This status page is provided for your convenience -- you may close this window and the export will be <i>delivered to your inbox</i> when it's completed.</p>
+  <p> You can also return to this page ( <%= link_to export_url  @export %> ) at any time to check the status of your export.</p>
+</div>
 <div class="progress progress-striped active">
-  <div id="mybar" class="bar" ></div>
+  <div id="export_bar" class="bar" ></div>
 </div>
-<div id="centered_div" class="center"
-  <p>You may close this window and the export will continue</p>
-</div>
+
 </section>
 <section>
 	<!--
@@ -25,7 +27,7 @@
 </div>
 
 <script>
-  var bar = $('#mybar');
+  var bar = $('#export_bar');
   var progress = 0;
   var export_path = 'test';
 
