--- a/app/views/projects/_export_search.html.erb
+++ b/app/views/projects/_export_search.html.erb
@@ -74,7 +74,8 @@
                                        html: { class: "form-horizontal"}) do |f| %>
             <%= f.email_field :email, 
                               placeholder: 'enter email',
-                              class: 'span3' %>
+                              class: 'span3',
+                              validate: { presence: true } %>
             <%= f.input :projects, as: :hidden, input_html: {value: @all_projects.map(&:id)} %>
           </p>
         </div>
