--- a/app/views/projects/_export_search.html.erb
+++ b/app/views/projects/_export_search.html.erb
@@ -1,5 +1,15 @@
 <div class='row'>
   <div class="center">
+    <% if current_user_is_aiddata_admin %>
+      <div class='row'>
+        <h2>
+          <span id='admin' data-toggle="tooltip" title="Visible to AidData Admin only">
+            <%= pluralize(@search.total, "Project") %> 
+          (<%= link_to "Aiddata Admin Quick Export", "#{request.protocol}#{request.host_with_port}#{request.fullpath}".gsub(/projects/, 'projects.csv')%>)
+        </span>
+      </h2>
+      </div>
+    <% end %>
     <a class="btn btn-primary" data-toggle="modal" href="#export_dialog">
     Export as CSV (<%= pluralize(@search.total, "Project") %>)</a>
 
@@ -98,4 +108,5 @@
   $( ".selector" ).bind( "dialogopen", function(event, ui) {
     $( "#export-form").validationEngine();
   });
+
 </script>
