--- a/app/views/export_mailer/export_request.erb
+++ b/app/views/export_mailer/export_request.erb
@@ -1,4 +1,4 @@
-Your export is attached as in CSV format.<br /><br />
+Your export is attached in CSV format.<br /><br />
 Alternately, click <%= link_to "here", root_url + @export.file_path %> to
 download your export.<br />
 
