Fixed caching and updating after saving a Scope

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 </head>
-<body data-spy="scroll" data-offset="150" data-target=".scroll-spy" >
+<body data-spy="scroll" data-target=".scroll-spy" >
 
     <%= render 'layouts/header' %>
 
