--- a/app/assets/stylesheets/project/project_form.css.scss
+++ b/app/assets/stylesheets/project/project_form.css.scss
@@ -27,6 +27,12 @@
 		margin-left:25px;
 	}
 
+	.project-form-anchor:before  {
+		    display:block; 
+		    content:""; 
+		    height:50px; 
+		    margin:-50px 0 0; 
+	}
 	#project-form-nav-wrapper {
 
 		#project-form-nav {
@@ -70,9 +76,11 @@
 		}
 
 		#project-form-flow-class {
+			background-color: #B9CAFA;
 		}
 
 		#project-form-loan-detail {
+			background-color: #FFE3E3;
 		}
 		#project-form-sources {
 		}
