--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -1,26 +1,26 @@
 <div id='project-form-wrapper' class='project-form row-fluid span12'>
 	
-	<div id='project-form-nav-wrapper' class='span1  scroll-spy'>
+	<!-- div id='project-form-nav-wrapper' class='span1 '>
 		<ul class='nav nav-pills nav-stacked' id='project-form-nav'>
-			<li><a href='#project-form-project'>Project</a></li>
-			<li><a href='#project-form-flow-class'>Flow Class</a></li>
-			<li><a href='#project-form-loan-detail'>Loan Detail</a></li>
-			<li><a href='#project-form-organizations'>Organizations</a></li>
-			<li><a href='#project-form-sources'>Sources</a></li>
-			<li><a href='#project-form-recipients'>Recipients</a></li>
-			<li><a href='#project-form-transactions'>Transactions</a></li>
-			<li><a href='#project-form-contacts'>Contacts</a></li>
+			<li><a href='#project-anchor'>Project</a></li>
+			<li><a href='#flow-class-anchor'> Flow Class</a></li>
+			<li><a href='#loan-detail-anchor'>Loan Detail</a></li>
+			<li><a href='#organizations-anchor'>Organizations <br> Sources</a></li>
+			<li><a href='#recipients-anchor'>Recipients <br> Transactions </a></li>
+			<li><a href='#contacts-anchor'>Contacts</a></li>
 			<li><a href = '#' class ='btn' id='toggle_color'>Colorize</a></li>
 		</ul>
-	</div>
+	</div -->
 
 	<%= simple_form_for(@project, html: {class: ""}) do |f| %>
 
-		<div class='span11'>
-			<a class='project-form-anchor' id='project-form-content'></a>
+		<div id='project-form-content' class='span12'>
+
 			<div class='row-fluid'>
+				
 				<div id ='project-form-project' class='span12'>
-					<h3> Project</h3>
+					<a id='project-anchor' class='project-form-anchor'></a>
+					<h3> Project #<%= @project.id || " (new) " %> </h3>
 					<div class='row-fluid'>
 						<%= f.association :donor, wrapper_html: {class: "span2"}, label: 'Donor country' %>
 						<%= f.input :title, wrapper_html: {class: "span6"} %>
@@ -46,6 +46,7 @@
 						</div>
 					<div class='row-fluid'>
 						<div id = 'project-form-flow-class' class = 'span3'>
+							<a id='flow-class-anchor' class='project-form-anchor'></a>
 							<hr>
 							<%= f.simple_fields_for :flow_class do |flow_class_form| %>  
 								<%= flow_class_form.association :oda_like_1 %>
@@ -91,6 +92,7 @@
 							</div>
 						</div>
 						<div class='span9' id = 'project-form-loan-detail'>
+							<a id='loan-detail-anchor' class='project-form-anchor'></a>
 							<hr>
 							<%= f.simple_fields_for :loan_detail do |loan_detail_form| %>
 								<div class='row-fluid'>
@@ -107,6 +109,7 @@
 			</div>
 			<% add_one_label = "<i class='icon-plus'></i>Add One" %>
 			<div class='row-fluid'>
+				<a id='organizations-anchor' class='project-form-anchor'></a>
 				<div id = 'project-form-organizations' class='span6 project-accessory-fields'>
 					<p class='row-fluid'>
 						<b>Participating Organizations:</b> <%= link_to_add_fields add_one_label, f, :participating_organizations %>
@@ -125,6 +128,7 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
+				<a id='recipients-anchor' class='project-form-anchor'></a>
 				<div id = 'project-form-recipients' class='span5 project-accessory-fields'>
 					<p class='row-fluid'>
 						<b>Recipients:</b> <%= link_to_add_fields add_one_label, f, :geopoliticals %>
@@ -144,7 +148,7 @@
 				</div>
 			</div>
 			<div class='row-fluid'>
-
+				<a id='contacts-anchor' class='project-form-anchor'></a>
 				
 				<div id = 'project-form-contacts' class='span7 project-accessory-fields'>
 					<p class='row-fluid'>
@@ -155,6 +159,10 @@
 					<% end %>
 				</div>
 			</div>
+			<div class='row-fluid' id='flavors'>
+				<span> Choose a flavor for this page: </span>
+			</div>
+
 		</div>
 		<%= f.input :iteration, as: :hidden, hint: "Iteration: #{@project.iteration+=1}" %>
 		<%= f.input :owner_id, wrapper_html: {class: ""},  as: :hidden, hint: "Owner: "+ (@project.owner.nil? ? 'None' : @project.owner.name) %>
@@ -199,42 +207,51 @@
 		$('.active-check').toggleClass('active-project-check').toggleClass('inactive-project-check')
 	})
 
-var colored = false
-function colorize(true_or_false) {
+var flavors= ["neon", "pastel", "plain"]
+flavors.forEach(function(f) {
+	$('#flavors').append("<a class='btn flavor-button' data-flavor='"+f+"'>"+f+"</a>")
+})
+
+$('.flavor-button').click(function(){
+	colorize($(this).attr("data-flavor"))
+})
+
+function colorize(flavor) {
 	var items = [
-		["#project-form-nav-wrapper", "background-color", "f0c030"],
-		["#project-form-nav", "background-color", "f0f030"],
-		["#project-form-wrapper", "background-color", "40d040"],
-		["#project-form-content", "background-color", "5090a0"],
-		["#project-form-project", "background-color", "ee4466"],
-		["#project-form-flow-class", "background-color", "a91"],
-		["#project-form-loan-detail", "background-color", "1fa"],
-		["#project-form-sources", "background-color", "44eeaa"],
-		["#project-form-recipients", "background-color", "7c2"],
-		["#project-form-transactions", "background-color", "dda"],
-		["#project-form-organizations", "background-color", "1aa"],
-		["#project-form-contacts", "background-color", "375"],
+		{ selector: "#project-form-nav-wrapper", neon: "#f0c030" },
+		{ selector: "#project-form-nav", neon: "#f0f030" },
+		{ selector: "#project-form-wrapper", neon: "#40d040", pastel: "#B9E4B9" },
+		{ selector: "#project-form-content", neon: "#5090a0", pastel: "#EE9EAE" },
+		{ selector: "#project-form-project", neon: "#ee4466" , pastel: "#EE9EAE"},
+		{ selector: "#project-form-flow-class", neon: "#a91", pastel: "#F5F2D9" },
+		{ selector: "#project-form-loan-detail", neon: "#1fa", pastel: "#F8E3BE" },
+		{ selector: "#project-form-sources", neon: "#44eeaa", pastel: "#F8E3BE" },
+		{ selector: "#project-form-recipients", neon: "#7c2", pastel: "#83FFC1" },
+		{ selector: "#project-form-transactions", neon: "#dda", pastel: "#F56855" },
+		{ selector: "#project-form-organizations", neon: "#1aa", pastel: "#F56855" },
+		{ selector: "#project-form-contacts", neon: "#375",  pastel: "#F8E3BE"  },
 	]
 
-	items.forEach(function(item) {
-		$(item[0]).css(item[1], ( true_or_false ? "#"+item[2] : "transparent"))
-	})	
+	if (flavor != "plain" && flavor != false ) {
 
-	colored = true_or_false
-	console.log(colored)
+		items.forEach(function(item) {
+			$(item.selector).css("background-color", item[flavor] )
+		})
+	}
+	else {
+		items.forEach(function(item) {
+			$(item.selector).css('background-color', 'transparent')
+		})
+	}
+
+	localStorage.china_flavor = flavor;	
 }
 
-function toggle_colorize() {
-	console.log(colored)
-	if ( colored == false ) {
-		colorize(true)
-	}
-	else { 
 
-		colorize(false) 
-	}
+var your_flavor = localStorage.china_flavor || false
+if (your_flavor) {
+	colorize(your_flavor)
 }
 
-$('#toggle_color').click(toggle_colorize)
 
 </script>
