--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -20,6 +20,7 @@
     <td><%= link_to 'View', organization %>
       <% if current_user && current_user.owner == Organization.find_by_name("AidData") %>
          | <%= link_to 'Edit', edit_organization_path(organization) %>
+         | <%= link_to 'Delete',  organization, method: :delete, confirm: "Are you sure?" %>
       <% end %>
     </td>
   </tr>
