--- a/app/views/static_pages/_analyze_js.html.erb
+++ b/app/views/static_pages/_analyze_js.html.erb
@@ -4,6 +4,7 @@
         <a href="#" id="all" class="btn active">All Projects</a>
         <a href="#" id="year" class="btn">Projects By Year</a>
         <a href="#" id="flow" class="btn">Projects By Flow Class</a>
+        <a href="#" id="sector" class="btn">Projects By Sector</a>
       </div>
 
       <div id='loading-bar' class='offset2 span8' style='margin:20px'>
@@ -17,7 +18,7 @@
       </div>
     </div>
     <div class='row'>
-      <p>Animated Bubble Chart</p>
+      <p>Chinese Official Finance, USD-2009.</p>
     </div>
   </div>
   <%= javascript_include_tag 'bubbles/index' %>
