--- a/app/views/export_mailer/export_request.erb
+++ b/app/views/export_mailer/export_request.erb
@@ -2,6 +2,6 @@ Your export is attached in CSV format.<br /><br />
 Alternately, click <%= link_to "here", root_url + @export.file_path %> to
 download your export.<br />
 
-Be aware that they above link will be deactivated after twenty-four hours.
+Be aware that the above link will be deactivated after twenty-four hours.
 <br /><br />
 -Aiddata
