--- a/app/views/projects/_field_for_organization.html.erb
+++ b/app/views/projects/_field_for_organization.html.erb
@@ -1,6 +1,7 @@
 <% cache "fields_for_organization_form" do %>
 	<%= f.association :organization,
-	label_method: :name_with_type,
+	# Org types loaded by AJAX on the project form
+	input_html: {class: "organization-select"},
 	wrapper_html: {class: wrapper_class } 
 	%>
 <% end %>
